Creado mediante Colaboratory

--- a/Simulacion/04_HilosDeEjecucion.ipynb
+++ b/Simulacion/04_HilosDeEjecucion.ipynb
@@ -430,7 +430,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,6 +485,7 @@
         "\n",
         "  # metodo que simula el cobro de un cliente\n",
         "  def cobrar(self, cliente):\n",
+        "    print('Comenzamos a cobrar al cliente :', cliente.nombre)\n",
         "    # se revisa el carrito del cliente y el catalogo\n",
         "    total = 0\n",
         "    # cada articulo se cobra\n",
@@ -521,26 +522,29 @@
       ],
       "metadata": {
         "id": "fjUewaCtyvDi",
-        "outputId": "782adb51-eebe-4e12-800d-58e0fe243b3c",
+        "outputId": "9a05d05e-6fd3-4017-aa49-671353a34bc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Comenzamos a cobrar al cliente : Mike\n",
             "Se cobra : PS5 10000\n",
             "Se cobra : SmartWatch 7500\n",
             "Se cobra : Audifonos 2500\n",
             "Total del cliente Mike : 20000\n",
+            "Comenzamos a cobrar al cliente : Ivan\n",
             "Se cobra : GTX1000 6000\n",
             "Se cobra : HDD 900\n",
             "Se cobra : GTX1000 6000\n",
             "Se cobra : Laptop 25000\n",
             "Total del cliente Ivan : 37900\n",
+            "Comenzamos a cobrar al cliente : Jonathan\n",
             "Se cobra : Laptop 25000\n",
             "Se cobra : PS5 10000\n",
             "Se cobra : Audifonos 2500\n",
@@ -549,7 +553,7 @@
             "Se cobra : GTX1000 6000\n",
             "Se cobra : SmartWatch 7500\n",
             "Total del cliente Jonathan : 53400\n",
-            "Este algoritmo tomo:  28039.95394706726\n"
+            "Este algoritmo tomo:  28038.564205169678\n"
           ]
         }
       ]
@@ -596,10 +600,12 @@
         "\n",
         "  # metodo que simula el cobro de un cliente\n",
         "  def run(self):\n",
+        "    print('Comenzamos a cobrar al cliente :', self.cliente.nombre)\n",
         "    # se revisa el carrito del cliente y el catalogo\n",
         "    total = 0\n",
         "    # cada articulo se cobra\n",
         "    for articulo in self.cliente.carrito:\n",
+        "      time.sleep(2)\n",
         "      print('Se cobra :',articulo, self.catalogo[articulo])\n",
         "      # total almacena el total de los articulos del cliente\n",
         "      total += self.catalogo[articulo]\n",
@@ -618,43 +624,72 @@
         "                      'GTX1000', 'SmartWatch']\n",
         "\n",
         "  amazon1 = Amazon(\"Trabajador 1\", cliente1)\n",
+        "  # se ejecuta cada hilo de manera concurrente\n",
         "  amazon1.start()\n",
         "\n",
         "  amazon2 = Amazon(\"Trabajador 2\", cliente2)\n",
+        "  # se ejecuta cada hilo de manera concurrente\n",
         "  amazon2.start()\n",
         "\n",
         "  amazon3 = Amazon(\"Trabajador 3\", cliente3)\n",
+        "  # se ejecuta cada hilo de manera concurrente\n",
         "  amazon3.start()\n",
+        "\n",
+        "  # esperamos a que todos los hilos hayan terminado\n",
+        "  amazon1.join()\n",
+        "  amazon2.join()\n",
+        "  amazon3.join()\n",
+        "\n",
         "  fin = time.time()\n",
         "  print(\"Este algoritmo tomo: \", (fin-inicio)*1000)\n",
         "\n"
       ],
       "metadata": {
         "id": "zVXgevhrurun",
-        "outputId": "63253dc1-17f6-448c-a8e0-3042b28f8b5c",
+        "outputId": "1a8fd531-598c-4c0d-e016-ffd9059bfce4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Se cobra : Se cobra : PS5GTX1000 6000\n",
-            "Se cobra : HDD 900\n",
-            "Se cobra : GTX1000 Se cobra : Laptop 25000Este algoritmo tomo:  4.626750946044922\n",
-            "10000\n",
+            "Comenzamos a cobrar al cliente : Mike\n",
+            "Comenzamos a cobrar al cliente : Ivan\n",
+            "Comenzamos a cobrar al cliente : Jonathan\n",
+            "Se cobra : PS5 10000\n",
+            "Se cobra : GTX1000 6000\n",
+            "Se cobra : Laptop 25000\n",
             "Se cobra : SmartWatch 7500\n",
+            "Se cobra : HDD 900\n",
+            "Se cobra : PS5 10000\n",
             "Se cobra : Audifonos 2500\n",
             "Total del cliente Mike : 20000\n",
-            " 6000\n",
+            "Se cobra : Audifonos 2500\n",
+            "Se cobra : GTX1000 6000\n",
+            "Se cobra : Halo 1500\n",
             "Se cobra : Laptop 25000\n",
-            "Total del cliente Ivan : 37900\n"
+            "Total del cliente Ivan : 37900\n",
+            "Se cobra : HDD 900\n",
+            "Se cobra : GTX1000 6000\n",
+            "Se cobra : SmartWatch 7500\n",
+            "Total del cliente Jonathan : 53400\n",
+            "Este algoritmo tomo:  14017.06600189209\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vale la pena notar la diferencia en la ejecución de ambos algoritmos y sobretodo la diferencia en el tiempo que tardan ambas versiones."
+      ],
+      "metadata": {
+        "id": "ucHhj2MDeR_W"
+      }
     },
     {
       "cell_type": "markdown",
