Creado mediante Colaboratory

--- a/Simulacion/04_HilosDeEjecucion.ipynb
+++ b/Simulacion/04_HilosDeEjecucion.ipynb
@@ -527,7 +527,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,10 +594,6 @@
         "    self.nombre = nombre\n",
         "    self.cliente = cliente\n",
         "\n",
-        "  '''def run(self):\n",
-        "      # esto es lo único que hace nuestro trabajador\n",
-        "      print('Trabajador')'''\n",
-        "\n",
         "  # metodo que simula el cobro de un cliente\n",
         "  def run(self):\n",
         "    print('Comenzamos a cobrar al cliente :', self.cliente.nombre)\n",
@@ -646,30 +642,30 @@
       ],
       "metadata": {
         "id": "zVXgevhrurun",
-        "outputId": "1a8fd531-598c-4c0d-e016-ffd9059bfce4",
+        "outputId": "f0f5627c-7c92-408a-fe45-6e92d38363e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Comenzamos a cobrar al cliente : Mike\n",
-            "Comenzamos a cobrar al cliente : Ivan\n",
+            "Comenzamos a cobrar al cliente : MikeComenzamos a cobrar al cliente :\n",
+            " Ivan\n",
             "Comenzamos a cobrar al cliente : Jonathan\n",
-            "Se cobra : PS5 10000\n",
-            "Se cobra : GTX1000 6000\n",
+            "Se cobra : PS5 Se cobra : GTX1000 6000\n",
+            "10000\n",
             "Se cobra : Laptop 25000\n",
-            "Se cobra : SmartWatch 7500\n",
-            "Se cobra : HDD 900\n",
+            "Se cobra : Se cobra : SmartWatch 7500\n",
+            "HDD 900\n",
             "Se cobra : PS5 10000\n",
-            "Se cobra : Audifonos 2500\n",
+            "Se cobra :Se cobra : Se cobra : Audifonos 2500\n",
+            " Audifonos 2500\n",
             "Total del cliente Mike : 20000\n",
-            "Se cobra : Audifonos 2500\n",
-            "Se cobra : GTX1000 6000\n",
+            "GTX1000 6000\n",
             "Se cobra : Halo 1500\n",
             "Se cobra : Laptop 25000\n",
             "Total del cliente Ivan : 37900\n",
@@ -677,7 +673,7 @@
             "Se cobra : GTX1000 6000\n",
             "Se cobra : SmartWatch 7500\n",
             "Total del cliente Jonathan : 53400\n",
-            "Este algoritmo tomo:  14017.06600189209\n"
+            "Este algoritmo tomo:  14022.159814834595\n"
           ]
         }
       ]
