Creado mediante Colaboratory

--- a/Simulacion/05_Envoltorios.ipynb
+++ b/Simulacion/05_Envoltorios.ipynb
@@ -283,7 +283,7 @@
         "          dentro_circulo += 1\n",
         "    return 4*dentro_circulo / n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +299,7 @@
         "%%time\n",
         "mc_pi_aprox()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +371,7 @@
         "    aproximacion = delta*suma*4\n",
         "    return aproximacion"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -387,7 +387,7 @@
         "%%time\n",
         "aproxPIsec()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +450,7 @@
         "    aproximacion = delta*suma*4\n",
         "    return aproximacion"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
         "%%time\n",
         "aproxPIpar()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,21 +596,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SEq5llWOj68-",
-        "outputId": "6e029947-7c02-4df1-8382-c4d605a79783"
+        "outputId": "ef559cd7-62d0-48d0-d590-05baaa59806f"
       },
       "source": [
         "from numba import cuda\n",
         "import numba\n",
         "print(cuda.gpus)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<Managed Device 0>\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -635,7 +635,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +688,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 286
         },
-        "outputId": "fd169a0a-3aca-40f3-91c8-0e7d356ab6c1"
+        "outputId": "fb648488-e8ad-47e4-c5ff-d0ff7a90aeec"
       },
       "source": [
         "# PYTHON PURO\n",
@@ -732,14 +732,14 @@
         "print (\"Mandelbrot creado en el CPU en %f segundos\" % dt)\n",
         "plt.imshow(gimage);"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Mandelbrot creado en el CPU en 13.178278 segundos\n"
-          ],
-          "name": "stdout"
+            "Mandelbrot creado en el CPU en 17.097261 segundos\n"
+          ]
         },
         {
           "output_type": "display_data",
@@ -750,7 +750,6 @@
             ]
           },
           "metadata": {
-            "tags": [],
             "needs_background": "light"
           }
         }
@@ -764,7 +763,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 286
         },
-        "outputId": "a38f43b4-eadf-4e1f-b23c-6a1661b80180"
+        "outputId": "d54c1ae6-2a35-43c9-cfb3-3f7a5470cb64"
       },
       "source": [
         "# CON NUMBA EN CPU\n",
@@ -799,14 +798,14 @@
         "print (\"Mandelbrot creado en el CPU optimizado en %f segundos\" % dt)\n",
         "plt.imshow(gimage); "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Mandelbrot creado en el CPU optimizado en 0.569027 segundos\n"
-          ],
-          "name": "stdout"
+            "Mandelbrot creado en el CPU optimizado en 0.605380 segundos\n"
+          ]
         },
         {
           "output_type": "display_data",
@@ -817,7 +816,6 @@
             ]
           },
           "metadata": {
-            "tags": [],
             "needs_background": "light"
           }
         }
@@ -831,12 +829,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 375
         },
-        "outputId": "437b1875-a40d-4603-8b19-652e2c353811"
+        "outputId": "85e4d0ff-f33b-4b81-9239-e9e9cadbf305"
       },
       "source": [
         "# CON NUMBA EN GPU\n",
         "from numba import *\n",
         "import matplotlib.pyplot as plt\n",
+        "from numba import cuda\n",
         "\n",
         "# Se convierte la funcion original en su version para GPU\n",
         "mandel_gpu = cuda.jit(restype=uint32, argtypes=[float32, float32, uint32], device=True)(mandel)\n",
@@ -878,24 +877,24 @@
         "print (\"Mandelbrot creado en el GPU en %f segundos\" % dt)\n",
         "plt.imshow(gimage);"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/numba/cuda/decorators.py:69: NumbaDeprecationWarning: Deprecated keyword argument `argtypes`. Signatures should be passed as the first positional argument.\n",
             "  warn(msg, category=NumbaDeprecationWarning)\n",
             "/usr/local/lib/python3.7/dist-packages/numba/cuda/decorators.py:69: NumbaDeprecationWarning: Deprecated keyword argument `argtypes`. Signatures should be passed as the first positional argument.\n",
             "  warn(msg, category=NumbaDeprecationWarning)\n"
-          ],
-          "name": "stderr"
+          ]
         },
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Mandelbrot creado en el GPU en 0.010589 segundos\n"
-          ],
-          "name": "stdout"
+            "Mandelbrot creado en el GPU en 0.004109 segundos\n"
+          ]
         },
         {
           "output_type": "display_data",
@@ -906,7 +905,6 @@
             ]
           },
           "metadata": {
-            "tags": [],
             "needs_background": "light"
           }
         }
