--- a/Bases_de_Datos/02_AlgebraRelacional.ipynb
+++ b/Bases_de_Datos/02_AlgebraRelacional.ipynb
@@ -34,7 +34,7 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Bases de Datos</i></h1>\n",
+        "  <h1 align=\"center\"><i>Algebra Relacional</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M. en C. Miguel Angel Pérez León</i></h5>\n",
