Creado mediante Colaboratory

--- a/Bases_de_Datos/01_BasesDeDatos.ipynb
+++ b/Bases_de_Datos/01_BasesDeDatos.ipynb
@@ -166,10 +166,10 @@
         "1. Se puedan almacenar alumnos, tutores y especialidades.\n",
         "2. Cada alumno esta caracterizado por un numero de cuenta, un nombre y un tutor. Elige una llave primaria para cada alumno.\n",
         "3. Cada alumno solo puede estar relacionado con un tutor, pero un tutor puede tener varios alumnos\n",
-        "4. Cada tutor esta caracterizado por su c.v., su nombre y la especialidad.\n",
+        "4. Cada tutor esta caracterizado por su id_tutor, su nombre y la especialidad.\n",
         "5. Cada tutor solo puede tener una especialidad, pero una especialidad puede pertenecer a diferentes tutores.\n",
         "6. La relación entre alumnos y tutores debe tener como atributo el año en el que se dio la tutoría. \n",
-        "7. El sistema debe ser capaz de permitir que un tutor tenga diferentes alumnos, siempre y cuando sea en diferentes años. Y ademas el sistema debe ser capaz de almacenar un histórico de los alumnos que han sido tutorandos de algún tutor."
+        "7. El sistema debe ser capaz de permitir que un tutor tenga diferentes alumnos, siempre y cuando sea en diferentes años. Y además el sistema debe ser capaz de almacenar un histórico de los alumnos que han sido tutorandos de algún tutor."
       ]
     },
     {
