Creado mediante Colaboratory

--- a/Bases_de_Datos/03_Manejadores.ipynb
+++ b/Bases_de_Datos/03_Manejadores.ipynb
@@ -56,9 +56,9 @@
         "\n",
         "Un manejador de bases de datos es un programa (algoritmo) que nos permite acceder a los datos de manera eficiente, organizada y sobretodo que no viola las restricciones mencionadas para el modelo relacional.\n",
         "\n",
-        "Para lograr esta eficiencia, un manejador de datos emplea algoritmos de búsqueda, **algoritmos de ordenamientos, arboles de decisión, expresiones regulares, tablas de dispersión**, entre otros.\n",
+        "Para lograr esta eficiencia, un manejador de datos emplea **algoritmos de búsqueda, algoritmos de ordenamientos, arboles de decisión, expresiones regulares, tablas de dispersión**, entre otros.\n",
         "\n",
-        "En la actualidad existen muchos manejadores de bases de datos (incluso algunos no-relacionales). Existen desde los mas básicos, hasta los mas completos, la elección del manejador de base de datos depende del contexto para el que se vaya a usar, es decir: recursos, seguridad, desempeño, presupuesto."
+        "En la actualidad existen muchos manejadores de bases de datos (incluso algunos no-relacionales). Existen desde los más básicos, hasta los más completos, la elección del manejador de base de datos depende del contexto para el que se vaya a usar, es decir: recursos, seguridad, desempeño, presupuesto, etc."
       ]
     },
     {
@@ -69,7 +69,7 @@
       "source": [
         "# SQL\n",
         "\n",
-        "Del ingles Structured Query Language (SQL), es el lenguaje que nos permite interactuar con el manejador de bases de datos para acceder a los datos almacenados. Sus principales características son: \n",
+        "Del ingles *Structured Query Language* (SQL), es el lenguaje que nos permite interactuar con el manejador de bases de datos para acceder a los datos almacenados. Sus principales características son: \n",
         "\n",
         "* Primer lenguaje en incorporar el modelo relacional para llevar a cabo consultas a los datos almacenados.\n",
         "\n",
