Creado mediante Colaboratory

--- a/Bases_de_Datos/02_AlgebraRelacional.ipynb
+++ b/Bases_de_Datos/02_AlgebraRelacional.ipynb
@@ -67,7 +67,7 @@
       "source": [
         "# Conceptos Básicos \n",
         "\n",
-        "Dado que para poder pasar del modelo relacional al uso de álgebra relacional se tiene que ser mas pragmático, es necesario tener en cuenta los siguientes conceptos:\n",
+        "Dado que para poder pasar del modelo relacional al uso de álgebra relacional se tiene que ser más pragmático, es necesario tener en cuenta los siguientes conceptos:\n",
         "\n",
         "* **Base de datos (B.D.)**: colección de relaciones.\n",
         "\n",
@@ -92,7 +92,7 @@
         "  * un elemento de $dom(A_{i})$.\n",
         "  * o un valor nulo.\n",
         "\n",
-        "Si el estado de la entidad Alumnos fuera.\n",
+        "Si el estado de la entidad ALUMNOS fuera.\n",
         "\n",
         "| num_cuenta    | nombre           | \n",
         "| :-:           |    :-:        | \n",
@@ -102,7 +102,7 @@
         "| $18238$       | Arturo      | \n",
         "\n",
         "\n",
-        "Y el estado de la entidad Carrera fuera.\n",
+        "Y el estado de la entidad CARRERA fuera.\n",
         "\n",
         "| num_carrera   | nombre_carrera| \n",
         "| :-:           |    :-:        | \n",
@@ -113,7 +113,7 @@
         "| $5$           | Ciencias de la Tierra       | \n",
         "\n",
         "\n",
-        "Entonces un posible estado de la relación Estudia, sería.\n",
+        "Entonces un posible estado de la relación ESTUDIA, sería.\n",
         "\n",
         "| num_cuenta    | num_carrera   | \n",
         "| :-:           |    :-:        | \n",
@@ -137,7 +137,7 @@
         "\n",
         "De igual manera que con el modelo relacional, el álgebra relacional establece un conjunto de restricciones, con la intención de mantener la integridad referencial.\n",
         "\n",
-        "* **De dominio**: valor atómico de un tipo, es decir que un atributo no puede estar compuesto por mas de un tipo de dato.\n",
+        "* **De dominio**: valor atómico de un tipo, es decir que un atributo no puede estar compuesto por más de un tipo de dato.\n",
         "\n",
         "* **De clave**: atributos que identifican de manera única a cada tupla.\n",
         "\n",
@@ -213,7 +213,7 @@
         "  * Unión, Intersección, Diferencia y Producto Cartesiano: mismo tipo de aridad que en teoría de conjuntos.\n",
         "* Otros operadores:\n",
         "  * División.\n",
-        "  * Funciones agregadas y de agrupación: group by, order by, $avg$, $min$, $max$."
+        "  * Funciones agregadas y de agrupación: $group\\ by$, $order\\ by$, $avg$, $min$, $max$."
       ]
     },
     {
@@ -260,7 +260,7 @@
         "\n",
         "* Elimina tuplas repetidas.\n",
         "\n",
-        "* No es conmutativa: $\\pi_{lista1}(\\pi_{lista2}(R))=\\pi_{lista1}(R)$\n",
+        "* No es conmutativa: $\\pi_{lista1}(\\pi_{lista2}(R)) \\ne \\pi_{lista2}(\\pi_{lista1}(R))$\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/emp2.png?raw=1\" width=\"800\"> \n",
@@ -355,7 +355,7 @@
       },
       "source": [
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/union.png?raw=1\" width=\"800\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/union.png?raw=1\" width=\"400\"> \n",
         "</center>\n",
         "FIGURA: Unión"
       ]
@@ -367,7 +367,7 @@
       },
       "source": [
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/inter.png?raw=1\" width=\"800\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/inter.png?raw=1\" width=\"400\"> \n",
         "</center>\n",
         "FIGURA: Intersección"
       ]
@@ -379,7 +379,7 @@
       },
       "source": [
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/dif.png?raw=1\" width=\"800\"> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/dif.png?raw=1\" width=\"400\"> \n",
         "</center>\n",
         "FIGURA: Diferencia"
       ]
@@ -394,9 +394,9 @@
         "\n",
         "* Para que el producto cartesiano tenga sentido, se pide que las relaciones involucradas en esta operaciones, **no sean compatibles con la unión**.\n",
         "\n",
-        "* Sean $R(A_{1},\\ldots,A_{n}) y S(B_{1},\\ldots,B_{m})$, entonces $R\\times S=Q(A_{1},\\ldots A_{n},B_{1},\\ldots B_{m})$, donde:\n",
+        "* Sean $R(A_{1},\\ldots,A_{n})$ y $S(B_{1},\\ldots,B_{m})$, entonces $R\\times S=Q(A_{1},\\ldots A_{n},B_{1},\\ldots B_{m})$, donde:\n",
         "\n",
-        "  * $Q$ tiene $n*m$ tuplas.\n",
+        "  * $Q$ tiene $n \\times m$ tuplas.\n",
         "\n",
         "  * $Q$ consta de todas las combinaciones de cada tupla de $R$ seguida de otra de $S$.\n",
         "\n",
@@ -472,7 +472,7 @@
         "\n",
         "* Sea $R(A_{1},\\ldots,A_{n})\\bowtie_{COND}S(B_{1},\\ldots,B_{m})=Q(A_{1},\\ldots A_{n},B_{1},\\ldots B_{m})$, donde:\n",
         "\n",
-        "  * Q consta de todas las combinaciones de cada tupla de R seguida de otra tupla de S, que satisfaga la condición de Join COND.\n",
+        "  * $Q$ consta de todas las combinaciones de cada tupla de $R$ seguida de otra tupla de $S$, que satisfaga la condición de Join COND.\n",
         "\n",
         "  * Si ninguna combinación cumple la condición COND el resultado es la **relación vacía**.\n",
         "\n",
