Creado mediante Colaboratory

--- a/Bases_de_Datos/02_AlgebraRelacional.ipynb
+++ b/Bases_de_Datos/02_AlgebraRelacional.ipynb
@@ -85,7 +85,7 @@
         "\n",
         "* **Esquema de la relación**: sean $A_{1},...,A_{n}$ atributos de una relación, podemos pensar en que dicha relación se ve así $R(A_{1},...A_{n})$. El esquema de la relación sería.\n",
         "\n",
-        "$$Estudia(num\\_cuenta, num\\_carrera)$$\n",
+        "$$ESTUDIA(num\\_cuenta, num\\_carrera)$$\n",
         "\n",
         "* **Estado de la relación**: sea $r=(t_{1},t_{2},...,t_{n})$ un conjunto de tuplas de la relación $r$, donde cada valor $v_{i}$ de $t_{i}$ con $1\\leq i\\leq n$ es:\n",
         "\n",
