Creado mediante Colaboratory

--- a/Bases_de_Datos/02_AlgebraRelacional.ipynb
+++ b/Bases_de_Datos/02_AlgebraRelacional.ipynb
@@ -153,7 +153,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Ejemplo relación:\n",
+        "## Ejemplo relación\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/relacion.png?raw=1\" width=\"800\"> \n",
@@ -166,7 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Ejemplo de llave foránea:\n",
+        "## Ejemplo de llave foránea\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/foranea.png?raw=1\" width=\"800\"> \n",
@@ -213,7 +213,7 @@
         "  * Unión, Intersección, Diferencia y Producto Cartesiano: mismo tipo de aridad que en teoría de conjuntos.\n",
         "* Otros operadores:\n",
         "  * División.\n",
-        "  * Funciones agregadas y de agrupación: $group\\ by$, $order\\ by$, $avg$, $min$, $max$."
+        "  * Funciones de agregación y de agrupación: $count$, $avg$, $min$, $max$, $group\\ by$, $order\\ by$."
       ]
     },
     {
@@ -559,37 +559,150 @@
         "id": "VTksj54HKF4-"
       },
       "source": [
-        "### Ejemplo 5\n",
+        "### Ejemplo:\n",
         "\n",
-        "Obtener el $NSS$ de los empleados que trabajan en **todos y cada uno** de los proyectos en los que trabaja el trabajador con $NSS=123456789$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "i5zcE0juKXwN"
-      },
-      "source": [
+        "Obtener el $NSS$ de los empleados que trabajan en **todos y cada uno** de los proyectos en los que trabaja el trabajador con $NSS=123456789$.\n",
+        "\n",
         "* Esta consulta conviene pensarla en partes para que sea mas sencillo:\n",
         "\n",
         "  * Primero: proyectamos nombre y $NSS$ de todos los proyectos en los que participan todos y cada uno de los empelados y guardamos el resultado intermedio como $NSS_{-}N\\acute{U}M_{-}PRY$.\n",
         "\n",
         "  * Segundo: proyectamos los proyectos en los cuales participa el empleado con $NSS=123456789$, guardamos resultado como $N\\acute{U}MS_{-}PRY$.\n",
         "\n",
-        "  * Ultimo: realizamos la división $NSS_{-}N\\acute{U}M_{-}PRY \\div N\\acute{U}MS_{-}PRY$. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WCl4fHOLLZEz"
-      },
-      "source": [
-        "<center>\n",
+        "  * Ultimo: realizamos la división $NSS_{-}N\\acute{U}M_{-}PRY \\div N\\acute{U}MS_{-}PRY$. \n",
+        "\n",
+        "  <center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/ejemodiv.png?raw=1\" width=\"800\"> \n",
         "</center>\n",
         "FIGURA: División"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Funciones de agregación y agrupación\n",
+        "\n",
+        "Son funciones que nos permiten combinar tuplas de una relación para producir un valor “agregado” o \"agrupado\".\n",
+        "\n",
+        "Las funciones más comúnes son:\n",
+        "\n",
+        "*   $count$: devuelve el **conteo** de las tuplas de una relación.\n",
+        "*   $sum$: devuelve la **suma** de uno de los atributos de la relación.\n",
+        "*   $avg$: devuelve el valor **promedio** de uno de los atributos de la relación.\n",
+        "*   $min$: devuelve el **mínimo** de uno de los atributos de la relación.\n",
+        "*   $max$: devuelve el **máximo** de uno de los atributos de la relación.\n",
+        "*   $order\\ by$: **ordena** los elementos de la relación de acuerdo a uno de los atributos de la misma.\n",
+        "\n",
+        "Este valor (aunque sea único) sigue siendo una relación, no hay que perder de vista el hecho de que en álgebra relacional, **todo es una relación**.\n",
+        "\n",
+        "Veamos un ejemplo sencillo."
+      ],
+      "metadata": {
+        "id": "V1QDnUKq_PKh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejemplos:\n",
+        "\n",
+        "Supongamos que tenemos la siguiente relación.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/emp.png?raw=1\" width=\"800\"> \n",
+        "</center>\n",
+        "\n",
+        "Para obtener el número de tuplas en la relación lo que tenemos que hacer es lo siguiente.\n",
+        "\n",
+        "$$G_{count(ND)}(EMP)$$\n",
+        "\n",
+        "La letra $G$ indica que se hace uso de funciones de agregación y el resultado de la misma sería.\n",
+        "\n",
+        "| count    |\n",
+        "| :-:      |\n",
+        "| $8$      |\n",
+        "\n",
+        "Para obtener el número de departamento más grande, necesitamos realizar la siguiente consulta de álgebra relacional.\n",
+        "\n",
+        "$$G_{max(ND)}(EMP)$$\n",
+        "\n",
+        "Y el resultado de la misma sería.\n",
+        "\n",
+        "| count    |\n",
+        "| :-:      |\n",
+        "| $8$      |\n",
+        "\n",
+        "Para ordenar los resultados por el atributo *ND* la consulta sería la siguiente\n",
+        "\n",
+        "$$_{ND}G(EMP)$$\n",
+        "\n",
+        "Y el resultado sería.\n",
+        "\n",
+        "| APELLIDO   | NSS           | ND  | \n",
+        "| :-:        |    :-:        |:-:  |\n",
+        "| $Borg$     | $888665555$   | $1$ |\n",
+        "| $Zelaya$   | $999886666$   | $4$ |\n",
+        "| $Wallace$  | $987654321$   | $4$ |\n",
+        "| $Jabbar$   | $987987987$   | $4$ |\n",
+        "| $Smith$    | $123456789$   | $5$ |\n",
+        "| $Wong$     | $333445555$   | $5$ |\n",
+        "| $Narayan$  | $666688444$   | $5$ |\n",
+        "| $English$  | $453453453$   | $5$ |\n",
+        "\n",
+        "Incluso podemos contar los emepleados que pertenecen a un departamento mediante la siguiente consulta.\n",
+        "\n",
+        "$$_{ND}G_{count(ND)}(EMP)$$\n",
+        "\n",
+        "Y el resultado sería.\n",
+        "\n",
+        "| ND   | count |\n",
+        "| :-:  |    :-:|\n",
+        "| $1$  | $1$   |\n",
+        "| $4$  | $3$   |\n",
+        "| $5$  | $4$   |\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZYqAaIjTCjP8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ejercicios\n",
+        "\n",
+        "Sea el siguiente esquema.\n",
+        "\n",
+        "$$Cuenta (nombreSucursal, numCta, saldo)$$\n",
+        "$$Sucursal (nombreSucursal, ciudad, activos)$$\n",
+        "$$Cliente (nombreCliente, calle, ciudad)$$\n",
+        "$$CtaCliente (nombreCliente, numCta)$$\n",
+        "$$Prestamo (nombreSucursal, numPrestamo, importe)$$\n",
+        "$$Prestatario (nombreCliente, numPrestamo)$$\n",
+        "\n",
+        "1. Encontrar la información de todos los préstamos realizados en la\n",
+        "sucursal llamada “Fuentes Brotantes”.\n",
+        "2. Determinar el nombre de los clientes que viven en Guanajuato.\n",
+        "3. Nombre de los clientes del banco que tienen una cuenta, un préstamo\n",
+        "o ambas cosas.\n",
+        "4. Determinar el número de cuenta y la ciudad donde fue aperturada cada cuenta.\n",
+        "5. Relación de clientes que tienen abierta una cuenta pero no tienen\n",
+        "ninguna de préstamo.\n",
+        "6. Todos los clientes que tienen un préstamo y una cuenta abierta\n",
+        "7. Nombre de los clientes que tienen un préstamo en la sucursal de\n",
+        "Fuentes Brotantes.\n",
+        "8. Nombre de los clientes que tienen un préstamo y el importe del\n",
+        "mismo.\n",
+        "9. Nombre de los clientes con préstamo mayor a cinco mil pesos.\n",
+        "10. Nombre de los clientes que tienen una cuenta con saldo menor a\n",
+        "$3,000 y que no tienen préstamo.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zo6RglrlSHuB"
+      }
     },
     {
       "cell_type": "markdown",
@@ -600,10 +713,12 @@
         "# Referencias\n",
         "\n",
         "* Greg Riccardi: Principles of Database Systems with Internet an Java Aplications.\n",
-        "* Referencias  Anexo: Algebra relacional, https://www.unirioja.es/cu/arjaime/Temas/04.Anexo.pdf\n",
-        "* Referencias  https://www.w3schools.com/sql/\n",
-        "* Referencias  http://mysql.conclase.net/curso/?cap=000#\n",
-        "* Referencias  https://downloads.mysql.com/docs/refman-5.0-es.pdf"
+        "* Anexo: Algebra relacional, https://www.unirioja.es/cu/arjaime/Temas/04.Anexo.pdf\n",
+        "* https://www.w3schools.com/sql/\n",
+        "* http://mysql.conclase.net/curso/?cap=000#\n",
+        "* https://downloads.mysql.com/docs/refman-5.0-es.pdf\n",
+        "* **Profesora Amparo:** http://hp.fciencias.unam.mx/~alg/bd/alg.pdf\n",
+        "* Ejemplos: https://www.dsi.fceia.unr.edu.ar/downloads/base_de_datos/AlgebraRelacional.pdf"
       ]
     }
   ]
