Creado mediante Colaboratory

--- a/Bases_de_Datos/03_Manejadores.ipynb
+++ b/Bases_de_Datos/03_Manejadores.ipynb
@@ -281,7 +281,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/Bases_de_Datos/03_Manejadores.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/desarrollo/Bases_de_Datos/03_Manejadores.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -346,13 +346,13 @@
         "id": "YPPHIpSaNQWL"
       },
       "source": [
-        "# MySQL\n",
+        "# *MySQL*\n",
         "\n",
         "MySQL es el manejador de bases de datos que se utilizará a lo largo del curso, se caracteriza por:\n",
         "\n",
         "* Es un manejador de bases de datos relacional.\n",
         "* Manejador de código abierto, es decir que cualquiera puede descargar el código fuente.\n",
-        "* A la par de Oracle, Microsoft SQL Server, MySQL es de los manejadores mas populares para el desarrollo web."
+        "* A la par de *Oracle, Microsoft SQL Server, MySQL* es de los manejadores mas populares para el desarrollo web."
       ]
     },
     {
@@ -363,14 +363,14 @@
       "source": [
         "## Comandos \n",
         "\n",
-        "Los principales comandos que se utilizan en MySQL se muestran a continuación: \n",
+        "Los principales comandos que se utilizan en *MySQL* se muestran a continuación: \n",
         "\n",
-        "* Create: permite crear usuarios, bases de datos, tablas, restricciones, etc.\n",
-        "* Insert: mediante este comando se insertan valores dentro de una base de datos.\n",
-        "* Update: comando que nos permite actualizar la información dentro de la base de datos.\n",
-        "* Drop: este comando es usado para eliminar desde tabla, hasta una base de datos completa.\n",
-        "* Select: permite seleccionar un conjunto de datos (es el equivalente a la proyección).\n",
-        "* Where: mas que un comando es una clausula, que en combinación con Select, permite seleccionar solo los datos que cumplan con un determinado criterio."
+        "* `CREATE`: permite crear usuarios, bases de datos, tablas, restricciones, etc.\n",
+        "* `INSERT`: mediante este comando se insertan valores dentro de una base de datos.\n",
+        "* `UPDATE`: comando que nos permite actualizar la información dentro de la base de datos.\n",
+        "* `DROP`: este comando es usado para eliminar desde tabla, hasta una base de datos completa.\n",
+        "* `SELECT`: permite seleccionar un conjunto de datos (es el equivalente a la proyección).\n",
+        "* `WHERE`: más que un comando es una clausula, que en combinación con `SELECT`, permite seleccionar solo los datos que cumplan con un determinado criterio."
       ]
     },
     {
@@ -431,7 +431,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +505,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,7 +591,7 @@
           ]
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
